<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.features.artist_detail.DetailArtistFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:background="@color/black">
                <androidx.media3.ui.PlayerView
                    android:id="@+id/video_player"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:show_buffering="when_playing"
                    />
<!--                <ImageView-->
<!--                    android:id="@+id/iv_movie_clip"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="256dp"-->
<!--                    android:scaleType="centerCrop"-->
<!--                    android:src="@drawable/img_movie_poster" />-->
            </FrameLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="32dp">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/start_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="16dp"/>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/end_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="16dp"/>

                <TextView
                    android:id="@+id/tv_actor_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tom_cruise"
                    style="@style/TextAppearance.AppCompat.Headline4"
                    android:textColor="@color/text_body"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:clipToPadding="false"
                    app:cardElevation="5dp"

                    app:layout_constraintEnd_toEndOf="@+id/end_guideline"
                    app:layout_constraintTop_toTopOf="parent">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingHorizontal="8dp"
                        android:orientation="horizontal"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_star_circle_64"
                            app:tint="@color/primary_base" />

                        <TextView
                            android:id="@+id/tv_artist_popularity"
                            style="@style/TextAppearance.AppCompat.Body.Medium.Regular"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="8dp"
                            android:text="@string/sample_actor_popularity"
                            android:textColor="@color/text_body" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/iv_actor_profile_head"
                    android:layout_width="96dp"
                    android:layout_height="128dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_actor_name"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:shapeAppearance="@style/ShapeAppearanceOverlay.RoundedCornerCard.8dp"
                    android:src="@drawable/img_tom_cruise"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:id="@+id/tv_actor_story_desc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@id/iv_actor_profile_head"
                    app:layout_constraintEnd_toEndOf="@+id/end_guideline"
                    app:layout_constraintTop_toTopOf="@id/iv_actor_profile_head"
                    style="@style/TextAppearance.AppCompat.Body.Medium.Regular"
                    android:textColor="@color/text_body"
                    android:text="@string/lipsum"
                    android:maxLines="3"
                    android:ellipsize="end"/>

                <TextView
                    android:id="@+id/tv_born_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"

                    android:text="@string/born"
                    style="@style/TextAppearance.AppCompat.Body.Medium.SemiBold"
                    android:textColor="@color/text_body"
                    app:layout_constraintTop_toBottomOf="@id/tv_actor_story_desc"
                    app:layout_constraintStart_toEndOf="@id/iv_actor_profile_head"
                    app:layout_constraintEnd_toEndOf="@+id/end_guideline"/>

                <TextView
                    android:id="@+id/tv_born_value_place"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"

                    app:layout_constraintTop_toBottomOf="@id/tv_born_title"
                    app:layout_constraintStart_toEndOf="@id/iv_actor_profile_head"
                    app:layout_constraintEnd_toEndOf="@+id/end_guideline"

                    android:text="@string/sample_actor_birth_place"
                    style="@style/TextAppearance.AppCompat.Body.Medium.Regular"
                    android:textColor="@color/text_body"/>
                <TextView
                    android:id="@+id/tv_born_value_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"

                    app:layout_constraintTop_toBottomOf="@id/tv_born_value_place"
                    app:layout_constraintStart_toEndOf="@id/iv_actor_profile_head"
                    app:layout_constraintEnd_toEndOf="@+id/end_guideline"

                    android:text="@string/sample_actor_birth_date"
                    style="@style/TextAppearance.AppCompat.Body.Medium.Regular"
                    android:textColor="@color/text_body"/>

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/divider_1"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/iv_actor_profile_head"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintEnd_toEndOf="@+id/end_guideline"/>

                <TextView
                    android:id="@+id/tv_photos_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/photos"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/divider_1"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintEnd_toStartOf="@id/tv_see_all"
                    style="@style/TextAppearance.AppCompat.Headline6"
                    android:textColor="@color/text_body"/>

                <TextView
                    android:id="@+id/tv_see_all"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="@+id/end_guideline"
                    app:layout_constraintTop_toTopOf="@id/tv_photos_title"
                    app:layout_constraintBottom_toBottomOf="@id/tv_photos_title"
                    android:text="@string/see_all_photos"
                    style="@style/TextAppearance.AppCompat.Body.Small.Regular"
                    android:textColor="@color/primary_dark_green"/>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_actor_photos"
                    android:layout_width="0dp"
                    android:layout_height="128dp"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:visibility="visible"
                    android:paddingHorizontal="16dp"
                    android:clipToPadding="false"
                    app:layout_constraintTop_toBottomOf="@id/tv_photos_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="5"
                    tools:listitem="@layout/item_actor_photos" />

                <TextView
                    android:id="@+id/tv_contact_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/rv_actor_photos"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintEnd_toEndOf="@+id/end_guideline"
                    android:text="@string/contact_info"
                    style="@style/TextAppearance.AppCompat.Headline6"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/text_body"/>

                <ImageView
                    android:id="@+id/iv_imdb_logo"
                    android:layout_width="72dp"
                    android:layout_height="0dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_imdb"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintTop_toTopOf="@id/tv_contact_value"
                    app:layout_constraintBottom_toBottomOf="@id/tv_contact_info"/>

                <TextView
                    android:id="@+id/tv_contact_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_contact_title"
                    app:layout_constraintStart_toEndOf="@id/iv_imdb_logo"

                    android:text="@string/imdb_id"
                    style="@style/TextAppearance.AppCompat.Body.Large.SemiBold"
                    android:textColor="@color/text_body"/>

                <TextView
                    android:id="@+id/tv_contact_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_contact_value"
                    app:layout_constraintStart_toEndOf="@id/iv_imdb_logo"

                    android:text="@string/view_agent"
                    style="@style/TextAppearance.AppCompat.Body.Small.Medium"
                    android:textColor="@color/text_body"/>

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/divider_2"
                    android:layout_width="0dp"
                    android:layout_height="8dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_contact_info"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/tv_filmography_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/filmography"
                    android:layout_marginTop="16dp"
                    style="@style/TextAppearance.AppCompat.Headline4"
                    android:fontFamily="@font/inter_regular"
                    app:layout_constraintTop_toBottomOf="@id/divider_2"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintEnd_toEndOf="@id/end_guideline"
                    android:textColor="@color/primary_base"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_filmography"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_filmography_title"
                    android:layout_marginTop="16dp"
                    android:clipToPadding="false"
                    android:paddingHorizontal="16dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_filmography"/>



            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </ScrollView>

<!--    <com.google.android.material.appbar.MaterialToolbar-->
<!--        android:id="@+id/toolbar"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:padding="0dp"-->
<!--        app:contentInsetStart="0dp"-->
<!--        android:background="@color/white">-->

<!--        <RelativeLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:paddingHorizontal="24dp">-->

<!--            <androidx.appcompat.widget.AppCompatImageButton-->
<!--                android:layout_width="48dp"-->
<!--                android:layout_height="48dp"-->
<!--                android:padding="10dp"-->
<!--                android:scaleType="centerCrop"-->
<!--                android:background="#00FFFFFF"-->
<!--                android:src="@drawable/ic_arrow_back"-->
<!--                android:layout_alignParentStart="true"-->
<!--                app:tint="@color/primary_base" />-->
<!--            <androidx.appcompat.widget.AppCompatImageButton-->
<!--                android:layout_width="48dp"-->
<!--                android:layout_height="48dp"-->
<!--                android:padding="10dp"-->
<!--                android:scaleType="centerCrop"-->
<!--                android:background="#00FFFFFF"-->
<!--                android:src="@drawable/ic_bookmark_outline"-->
<!--                android:layout_alignParentEnd="true"-->
<!--                app:tint="@color/primary_base" />-->
<!--        </RelativeLayout>-->

<!--    </com.google.android.material.appbar.MaterialToolbar>-->

</FrameLayout>