<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="220dp"
    android:layout_height="190dp"
    android:clipToPadding="false"
    android:layout_marginHorizontal="4dp"
    app:cardUseCompatPadding="true"
    app:cardElevation="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:shapeAppearance="@style/ShapeAppearanceOverlay.RoundedCornerCard.8dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            android:src="@drawable/img_movie_poster"
            android:scaleType="centerCrop"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.68"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sample_movie_title_1"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="4dp"

            style="@style/TextAppearance.AppCompat.Body.Medium.SemiBold"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/text_body"/>
        <TextView
            android:id="@+id/tv_media_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/movie"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            style="@style/TextAppearance.AppCompat.Body.Medium.Regular"
            android:textColor="@color/primary_base"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/baseline_stars_24"
            app:layout_constraintTop_toTopOf="@id/tv_rating"
            app:layout_constraintEnd_toStartOf="@id/tv_rating"
            android:layout_marginEnd="4dp"
            app:tint="@color/warning_base"/>
        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sample_rating"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            style="@style/TextAppearance.AppCompat.Body.Medium.Medium"
            android:textColor="@color/text_body_light"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>