<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    app:layout_constraintEnd_toEndOf="@id/end_gl"
    app:layout_constraintStart_toStartOf="@id/start_gl"
    app:layout_constraintTop_toTopOf="parent"
    app:shapeAppearance="@style/ShapeAppearanceOverlay.RoundedCornerCard.24dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_backdrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/shimmer"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:layout_width="96dp"
            android:layout_height="28dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_genre_value"
                style="@style/TextAppearance.AppCompat.Body.Medium.SemiBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/bg_white_30_rounded_8dp"
                android:maxLines="1"
                android:paddingHorizontal="6dp"
                android:paddingVertical="4dp"
                android:text="@string/sample_movie_genre"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </FrameLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/item_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.68" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/bg_black_30"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/item_guideline" />

        <TextView
            android:id="@+id/tv_movie_title"
            style="@style/TextAppearance.AppCompat.Body.Medium.SemiBold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/sample_movie_title_1"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@id/ly_rating"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/item_guideline" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="horizontal"
            android:paddingHorizontal="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_title">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_auto_graph_24"
                app:shapeAppearance="@style/ShapeAppearanceOverlay.RoundedCornerCard.8dp"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/tv_popularity"
                style="@style/TextAppearance.AppCompat.Body.Small.Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:text="@string/popularity_format"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_white_30_rounded_8dp"
            android:orientation="horizontal"
            android:paddingHorizontal="8dp"
            android:paddingVertical="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/item_guideline">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_star_circle_64"
                app:shapeAppearance="@style/ShapeAppearanceOverlay.RoundedCornerCard.8dp"
                app:tint="@color/warning_base" />

            <TextView
                android:id="@+id/tv_rating"
                style="@style/TextAppearance.AppCompat.Body.Medium.SemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:text="@string/sample_actor_popularity"
                android:textColor="@color/white" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>